fix hover effect on sidebarMenu icons on smaller screens

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -6,7 +6,7 @@
 	bottom: 0;
 	right: 0;
 	left: 0;
-	overflow: auto;
+	overflow: hidden;
 	padding: 0 1rem;
 
 	&__logo {
