--- a/src/styles/components/_sidebarMenu.scss
+++ b/src/styles/components/_sidebarMenu.scss
@@ -3,7 +3,7 @@
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	font-size: 1.4rem;
+	font-size: 1.3rem;
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
@@ -20,15 +20,34 @@
 			display: flex;
 			align-items: center;
 			cursor: pointer;
-			gap: 1rem;
-			border-radius: 50px;
-			padding: 0.6rem 1.4rem 0.6rem 1rem;
 
-			&:hover {
-				background-color: #e2e2e2;
+			@include mq('desktop') {
+				padding: 0.6rem 1.4rem 0.6rem 1rem;
+				border-radius: 30px;
+				gap: 1rem;
+				&:hover {
+					background-color: #e2e2e2;
+				}
 			}
 
-			span {
+			.icon {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				padding: 0.8rem;
+				border-radius: 50%;
+
+				&:hover {
+					background-color: #e2e2e2;
+				}
+
+				@include mq('desktop') {
+					padding: 0.3rem;
+					padding-left: 0;
+				}
+			}
+
+			.text {
 				font-size: 1.1rem;
 				display: none;
 
@@ -40,7 +59,6 @@
 	}
 	@include mq('phone-wide') {
 		flex-direction: column;
-		gap: 0.4rem;
 		border: none;
 	}
 
