--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -7,16 +7,16 @@ main {
 
 	@include mq('phone-wide') {
 		display: grid;
-		grid-template-columns: 4rem 1fr;
+		grid-template-columns: 5rem 1fr;
 	}
 
 	@include mq('tablet-wide') {
 		max-width: 1000px;
-		grid-template-columns: 4rem 4fr 1fr;
+		grid-template-columns: 5rem 3fr 1fr;
 	}
 	@include mq('desktop') {
 		max-width: 1280px;
-		grid-template-columns: 15rem 4fr 1fr;
+		grid-template-columns: 15rem 3fr 1fr;
 	}
 
 	.widgets {
